[package]
name = "pypi_downloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
futures = "0.3.25"
reqwest = "0.11.12"
tl = "0.7.7"
tokio = {version = "1.21.2", features = ["full"]}
